# vogelsang

./: .gitignore  Cargo.toml  deps.edn  flake.nix
degiro/: Cargo.toml
degiro/src/: account.rs  api.rs  client.rs  lib.rs  money.rs
degiro/src/api/: account_config.rs  account_data.rs  account_info.rs  account_state.rs  login.rs  orders.rs  portfolio.rs  product.rs  quotes.rs  search.rs  transactions.rs
erfurt/: Cargo.toml
erfurt/src/: candle.rs  lib.rs
qualsdorf/: Cargo.toml
qualsdorf/src/: active_return.rs  annualized_return.rs  annualized_risk.rs  average_drawdown.rs  cagr.rs  continuous_drawdown.rs  downside_potential.rs  downside_risk.rs  drawndown.rs  lib.rs  maximum_drawdown.rs  rolling_economic_drawdown.rs  ror.rs  sharpe_ratio.rs  sortino_ratio.rs  upside_potential.rs
src/: cli.rs  cmd.rs  lib.rs  main.rs  portfolio.rs  prelude.rs  server.rs  settings.rs
src/cmd/: calculate_portfolio.rs  mod.rs  stock_report.rs
src/data/: candles.rs  mod.rs  orders.rs  products.rs
src/events/: authorize.rs  calculate_portfolio.rs  fetch_data.rs  get_candles.rs  get_product.rs  login.rs  mod.rs  single_allocation.rs
src/google/: sheets.rs
src/puppet/: db.rs  degiro.rs  mod.rs  portfolio.rs  settings.rs
src/subs/: products.rs
src/vogelsang/: allocation.clj  api.clj  core.clj  data.clj  db.clj  quant.clj
