[package]
name = "vogelsang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = []

[dependencies]
erfurt = { path = "../erfurt" }
degiro-rs = { path = "../degiro-rs", features = ["erfurt"] }
qualsdorf = { path = "../qualsdorf" }
async-trait = "0.1.57"
statrs = "0.16.0"
tokio = { version = "1.21.1", features = ["full"] }
toml = "0.8"
config = "0.13.2"
clap = { version = "4.0.7", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
dashmap = "5.4.0"
futures = "0.3.25"
comfy-table = "7.1"
itertools = "0.12"
owo-colors = "3.5.0"
anyhow = "1.0.71"
thiserror = "1.0.40"
serde_json = "1.0.100"
bincode = "1.3.3"
rayon = "1.7.0"
strum = { version = "0.25.0", features = ["derive"] }
nalgebra = "0.32.3"
nalgebra-mvn = "0.14.0"
tap = "1.0.1"
