[package]
name = "vogelsang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = []

[dependencies]
erfurt = { path = "../erfurt" }
degiro-rs = { path = "../degiro-rs", features = ["erfurt"] }
qualsdorf = { path = "../qualsdorf" }
master-of-puppets = { path = "../master_of_puppets/" }
async-trait = "0.1"
statrs = "0.16"
tokio = { version = "1.21.1", features = ["full"] }
toml = "0.8"
config = "0.13"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
futures = "0.3"
comfy-table = "7"
itertools = "0.12"
owo-colors = "4.0.0"
thiserror = "1.0"
serde_json = "1.0"
bincode = "1.3.3"
rayon = "1.8"
strum = { version = "0.25", features = ["derive"] }
nalgebra = "0.32"
nalgebra-mvn = "0.14"
tap = "1.0"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"
atomic-take = "1.1"
regex = "1.10"
heed = "0.11"
anyhow = "1.0.79"
reqwest = { version = "0.11.23", default-features = false }

[lints.clippy]
correctness = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
float_cmp = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
str_to_string = "warn"
string_add = "warn"
try_err = "warn"
must_use_candidate = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
manual_unwrap_or = "warn"
map_unwrap_or = "warn"
unwrap_used = "warn"
expect_used = "warn"
complexity = "warn"
nursery = "warn"
