[package]
name = "degiro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erfurt = { path = "../erfurt/" }
qualsdorf = { path = "../qualsdorf/" }
async-recursion = "1.0.0"
chrono = { version = "0.4.22", features = ["serde"] }
color-eyre = "0.6.2"
derivative = "2.2.0"
headers = "0.3.7"
log = "0.4.17"
mime = "0.3.16"
regex = "1.6.0"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls", "rustls-tls", "cookies"] }
rustls = "0.20.6"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros", "parking_lot"] }
url = "2.2.2"
anyhow = "1.0.64"
dashmap = "5.4.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
serde_repr = "0.1.9"
